--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/styles/all.css" />
+	<link rel="stylesheet" href="/css/all.css" />
 
 </head>
 
@@ -29,8 +29,8 @@
 
 </div><!-- .wrapper -->
 
-<script src="/scripts/zepto.js"></script>
-<script src="/scripts/app.js"></script>
+<script src="/js/zepto.js"></script>
+<script src="/js/app.js"></script>
 
 </body>
 </html>
