--- a/stylus/stylus.styl
+++ b/stylus/stylus.styl
@@ -62,5 +62,5 @@ linear-gradient() {
 //-----------------------------------------------------------------------------
 
 @import 'normalize'
-@import 'style'
+@import 'app'
 @import 'largescreen'
