--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/css/all.css" />
+	<link rel="stylesheet" href="/stylus/all.css" />
 
 </head>
 
