--- a/css/stylus.css
+++ b/css/stylus.css
@@ -193,6 +193,9 @@ img {
 body {
   font-size: 1.3rem;
 }
+.delete {
+  display: none;
+}
 @media screen and (min-width: 40em) {
   body:after {
     content: 'tablet';
