--- a/css/stylus.css
+++ b/css/stylus.css
@@ -193,8 +193,18 @@ img {
 body {
   font-size: 1.3rem;
 }
-.delete {
-  display: none;
+.swipe {
+  padding-bottom: 20px;
+}
+.swipe li div,
+.swipe div div div {
+  margin: 0 10px;
+  padding: 50px 10px;
+  background: #1db1ff;
+  font-weight: bold;
+  color: #fff;
+  font-size: 20px;
+  text-align: center;
 }
 @media screen and (min-width: 40em) {
   body:after {
