--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -23,3 +23,17 @@ img {
 body {
 	font-size: 1.3rem;
 }
+
+
+.swipe {
+  padding-bottom:20px;
+}
+.swipe li div, .swipe div div div {
+  margin:0 10px;
+  padding:50px 10px;
+  background:#1db1ff;
+  font-weight:bold;
+  color:#fff;
+  font-size:20px;
+  text-align:center;
+}
