--- a/css/stylus.css
+++ b/css/stylus.css
@@ -190,17 +190,39 @@ img::selection {
 img {
   max-width: 100%;
 }
+html {
+  font-size: 62.5%;
+}
 body {
   font-size: 1.3rem;
 }
-.swipe {
-  padding-bottom: 20px;
+aside {
+  position: relative;
+  margin-left: -20%;
+  width: 20%;
+  display: block;
+  float: left;
 }
-.swipe li div,
-.swipe div div div {
+aside.drill {
+  position: relative;
+  margin-left: 0%;
+  width: 20%;
+  display: block;
+  float: left;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  -o-transition: all 0.1s linear;
+  -ms-transition: all 0.1s linear;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  -ms-transition: all 0.1s linear;
+  -o-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+}
+.swipe li div {
   margin: 0 10px;
   padding: 50px 10px;
-  background: #1db1ff;
+  background: #000;
   font-weight: bold;
   color: #fff;
   font-size: 20px;
