--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -20,18 +20,43 @@ img {
 	max-width: 100%;
 }
 
+html {
+	font-size: 62.5%; // 10px – for easier `rem` calculations
+}
+
 body {
 	font-size: 1.3rem;
 }
 
+aside {
+	position: relative;
+	margin-left:-20%;
+	width:20%;
+	display:block;
+	float:left;
+}
+
+aside.drill {
+	position: relative;
+	margin-left:0%;
+	width:20%;
+	display:block;
+	float:left;
+	-webkit-transition: all 0.1s linear;
+	-moz-transition: all 0.1s linear;
+	-o-transition: all 0.1s linear;
+	-ms-transition: all 0.1s linear;
+	transition: all 0.1s linear;
+}
+
 
 .swipe {
-  padding-bottom:20px;
+
 }
-.swipe li div, .swipe div div div {
+.swipe li div {
   margin:0 10px;
   padding:50px 10px;
-  background:#1db1ff;
+  background:black;
   font-weight:bold;
   color:#fff;
   font-size:20px;
