--- a/css/stylus.css
+++ b/css/stylus.css
@@ -176,6 +176,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+body:after {
+  content: 'mobile';
+  display: none;
+}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -195,6 +199,47 @@ html {
 }
 body {
   font-size: 1.3rem;
+}
+.header {
+  background: url("../img/bg-pattern-blue.png");
+  text-align: center;
+  height: 5rem;
+  line-height: 5rem;
+}
+.header a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 22px;
+  font-weight: bold;
+}
+.main {
+  padding: 0 1rem;
+}
+.main h1 {
+  font-size: 1.4rem;
+  font-weight: normal;
+  color: #000;
+}
+.listing {
+  position: relative;
+  margin-bottom: 1rem;
+}
+.listing h2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  min-height: 4rem;
+  line-height: 4rem;
+  padding: 0 1rem;
+  margin: 0;
+  background: rgba(0,0,0,0.75);
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: normal;
+}
+.listing .listing img {
+  display: block;
 }
 aside {
   position: relative;
