--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -2,6 +2,12 @@
 //	GLOBAL
 //-----------------------------------------------------------------------------
 
+// Conditional Content Loading with JavaScript (http://adactio.com/journal/5429/)
+body:after {
+	content: 'mobile';
+	display: none;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -28,6 +34,66 @@ body {
 	font-size: 1.3rem;
 }
 
+//-----------------------------------------------------------------------------
+//	HEADER
+//-----------------------------------------------------------------------------
+
+.header {
+	background: url("../img/bg-pattern-blue.png");
+	text-align: center;
+	height: 5rem;
+	line-height: 5rem;
+
+	a {
+		color: #fff;
+		text-decoration: none;
+		font-size: 22px;
+		font-weight: bold;
+	}
+}
+
+//-----------------------------------------------------------------------------
+//	DRILL
+//-----------------------------------------------------------------------------
+
+//-----------------------------------------------------------------------------
+//	SRP
+//-----------------------------------------------------------------------------
+
+.main {
+	padding: 0 1rem;
+
+	h1 {
+		font-size: 1.4rem;
+		font-weight: normal;
+		color: #000;
+	}
+}
+
+.listing {
+	position: relative;
+	margin-bottom: 1rem;
+
+	h2 {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		min-height: 4rem;
+		line-height: 4rem;
+		padding: 0 1rem;
+		margin: 0;
+		background: rgba(0, 0, 0, .75);
+		color: #fff;
+		font-size: 1.2rem;
+		font-weight: normal;
+	}
+
+	.listing img {
+		display: block;
+	}
+}
+
 aside {
 	position: relative;
 	margin-left:-20%;
@@ -49,7 +115,6 @@ aside.drill {
 	transition: all 0.1s linear;
 }
 
-
 .swipe {
 
 }
@@ -62,3 +127,8 @@ aside.drill {
   font-size:20px;
   text-align:center;
 }
+
+
+//-----------------------------------------------------------------------------
+//	FOOTER
+//-----------------------------------------------------------------------------
