--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -61,12 +61,15 @@ body {
 //-----------------------------------------------------------------------------
 
 .main {
-	padding: 0 1rem;
 
 	h1 {
 		font-size: 1.4rem;
 		font-weight: normal;
 		color: #000;
+	}
+
+	.content {
+		padding: 0px 1rem;
 	}
 }
 
@@ -148,7 +151,6 @@ aside.drill {
 	height: 35px;
 	position: relative;
 	bottom:0px;
-	border-radius: 5px;
 }
 
 .prev {
