--- a/stylus/stylus.styl
+++ b/stylus/stylus.styl
@@ -2,13 +2,13 @@
 //	Transparent Mixins
 //-----------------------------------------------------------------------------
 
-vendor(prop, args) {
-	-webkit-{prop}: args;
-	-moz-{prop}: args;
-	-ms-{prop}: args;
-	-o-{prop}: args;
-	{prop}: args;
-}
+// vendor(prop, args) {
+// 	-webkit-{prop}: args;
+// 	-moz-{prop}: args;
+// 	-ms-{prop}: args;
+// 	-o-{prop}: args;
+// 	{prop}: args;
+// }
 
 // border-radius()
 // 	vendor('border-radius', arguments)
@@ -60,13 +60,13 @@ column-count() {
 			column-count: arguments;
 }
 
-background-image() {
-	vendor('background-image', arguments);
-}
+// background-image() {
+// 	vendor('background-image', arguments);
+// }
 
-background() {
-	vendor('background', arguments);
-}
+// background() {
+// 	vendor('background', arguments);
+// }
 
 //-----------------------------------------------------------------------------
 //	Combine all files
