--- a/stylus/largescreen.styl
+++ b/stylus/largescreen.styl
@@ -14,6 +14,10 @@
 		font-size: 1.6rem;
 	}
 
+	.listing {
+		width: 50%;
+		float: left;
+	}
 }
 
 //-----------------------------------------------------------------------------
