--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -120,6 +120,17 @@ aside.drill {
 	transition: all 0.1s linear;
 }
 
+//-----------------------------------------------------------------------------
+//	DETAILS
+//-----------------------------------------------------------------------------
+
+.section {
+	h2 {
+		color:#669900;
+		text-shadow: 0 0.1rem 0 white;
+	}
+}
+
 /*
 	Gallery
  */
