--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -71,7 +71,7 @@ img {
 	}
 
 	.content {
-		padding: 0px 1rem;
+		padding: 0px 0rem;
 	}
 }
 
@@ -125,9 +125,18 @@ aside.drill {
 //-----------------------------------------------------------------------------
 
 .section {
+	padding:1rem 1rem 2rem 1rem;
+	margin:1rem 0;
+	box-shadow:0 0.2rem 0.6rem #999;
+
 	h2 {
 		color:#669900;
 		text-shadow: 0 0.1rem 0 white;
+		margin:0 0 0.5rem 0;
+	}
+
+	h3 {
+		margin:0.5rem 0;
 	}
 }
 
@@ -232,6 +241,19 @@ aside.drill {
 	color: white;
 }
 
+/* Basic Info */
+.basic-info {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: block;
+	overflow :hidden;
+
+	li {
+		float: left;
+		margin: 0 1.5em 0 0;
+	}
+}
 
 //-----------------------------------------------------------------------------
 //	FOOTER
