--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -58,6 +58,10 @@ img {
 //	DRILL
 //-----------------------------------------------------------------------------
 
+.drill {
+	background: url("../img/bg-pattern-blue2.png");
+}
+
 //-----------------------------------------------------------------------------
 //	SRP
 //-----------------------------------------------------------------------------
@@ -239,4 +243,5 @@ aside.drill {
 
 .footer {
 	padding: 0 1rem;
+	clear: both;
 }
