--- a/stylus/largescreen.styl
+++ b/stylus/largescreen.styl
@@ -14,10 +14,21 @@
 		font-size: 1.6rem;
 	}
 
+	.drill {
+		float: left;
+		width: 30%;
+	}
+
+	.main {
+		float: right;
+		width: 70%;
+	}
+
 	.listing {
 		width: 50%;
 		float: left;
 	}
+
 }
 
 //-----------------------------------------------------------------------------
