input on details

--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -128,22 +128,6 @@ aside.drill {
 //	DETAILS
 //-----------------------------------------------------------------------------
 
-.section {
-	padding:1rem 1rem 2rem 1rem;
-	margin:1rem 0;
-	box-shadow:0 0.2rem 0.6rem #999;
-
-	h2 {
-		color:#669900;
-		text-shadow: 0 0.1rem 0 white;
-		margin:0 0 0.5rem 0;
-	}
-
-	h3 {
-		margin:0.5rem 0;
-	}
-}
-
 /*
 	Gallery
  */
@@ -243,6 +227,43 @@ aside.drill {
 
 .current-slide em.on {
 	color: white;
+}
+
+.section {
+	padding:1rem 1rem 2rem 1rem;
+	margin:1rem 0;
+	box-shadow:0 0.2rem 0.6rem #999;
+
+	h2 {
+		color:#669900;
+		text-shadow: 0 0.1rem 0 white;
+		margin:0 0 0.5rem 0;
+	}
+
+	h3 {
+		margin:0.5rem 0;
+	}
+
+	input[type="text"] {
+		background: #ededed;
+		border: 1px solid #999;
+		box-shadow: inset 0 0.2rem 0.3rem #ccc;
+		padding: 0.7rem;
+		border-radius: 2px;
+		margin-top: 1em;
+		display: block;
+		overflow: hidden;
+		width: 100%;
+	}
+
+	input[type="text"]:hover {
+		border: 1px solid #666;
+	}
+
+	input[type="text"]:focus {
+		border: 1px solid #333;
+		background:white;
+	}
 }
 
 /* Basic Info */
