--- a/stylus/stylus.styl
+++ b/stylus/stylus.styl
@@ -15,7 +15,11 @@
 
 
 border-radius() {
-	vendor('border-radius', arguments)
+	-webkit-border-radius: arguments;
+	   -moz-border-radius: arguments;
+		-ms-border-radius: arguments;
+		 -o-border-radius: arguments;
+			border-radius:	arguments;
 }
 
 box-shadow() {
