adding best price hedge

--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -260,7 +260,16 @@ fieldset {
 	}
 
 	h3 {
-		margin:0.5rem 0;
+		margin:1rem 0;
+	}
+
+	.best-price {
+		background:#FF6600;
+		border-radius:3px;
+		color:white;
+		font-size:1.2rem;
+		font-weight:normal;
+		padding:0.3rem 0.7rem 0.2rem 0.7rem;
 	}
 
 	input[type="text"] {
@@ -288,7 +297,7 @@ fieldset {
 /* Basic Info */
 .basic-info {
 	list-style: none;
-	margin: 0;
+	margin: 1.5rem 0 0 0;
 	padding: 0;
 	display: block;
 	overflow :hidden;
