--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -42,6 +42,26 @@ fieldset {
 	padding: 0;
 }
 
+input[type="text"] {
+	background: #ededed;
+	border: 1px solid #999;
+	box-shadow: inset 0 0.2rem 0.3rem #ccc;
+	padding: 0.7rem;
+	border-radius: 2px;
+	display: block;
+	overflow: hidden;
+	width: 100%;
+}
+
+input[type="text"]:hover {
+	border: 1px solid #666;
+}
+
+input[type="text"]:focus {
+	border: 1px solid #333;
+	background:white;
+}
+
 //-----------------------------------------------------------------------------
 //	HEADER
 //-----------------------------------------------------------------------------
@@ -72,6 +92,10 @@ fieldset {
 		display: inline-block;
 		min-width: 100%;
 		margin-bottom: 2rem;
+	}
+
+	input {
+		color: red;
 	}
 
 	legend {
@@ -272,26 +296,6 @@ fieldset {
 		padding:0.3rem 0.7rem 0.2rem 0.7rem;
 	}
 
-	input[type="text"] {
-		background: #ededed;
-		border: 1px solid #999;
-		box-shadow: inset 0 0.2rem 0.3rem #ccc;
-		padding: 0.7rem;
-		border-radius: 2px;
-		margin-top: 1em;
-		display: block;
-		overflow: hidden;
-		width: 100%;
-	}
-
-	input[type="text"]:hover {
-		border: 1px solid #666;
-	}
-
-	input[type="text"]:focus {
-		border: 1px solid #333;
-		background:white;
-	}
 }
 
 /* Basic Info */
