--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -95,7 +95,43 @@ input[type="text"]:focus {
 	}
 
 	input {
-		color: red;
+		background: #2E323E;
+		border-top-color: #525B72;
+		border-right-color: #616C87;
+		border-bottom-color: #677492;
+		border-left-color: #616C87;
+		box-shadow: inset 0 0.2rem 0.3rem rgba(#3A4050, 0.65);
+		border-radius: 4px;
+	}
+
+	input:hover,
+	select:hover {
+		border-color: #262935;
+	}
+
+	::-webkit-input-placeholder {
+   		color: #616B86;
+	}
+
+	:-moz-placeholder {
+		color: #616B86;
+	}
+
+	:placeholder {
+		color: #616B86;
+	}
+
+	select {
+		background: #2E323E;
+		border-top-color: #525B72;
+		border-right-color: #616C87;
+		border-bottom-color: #677492;
+		border-left-color: #616C87;
+		box-shadow: inset 0 0.2rem 0.3rem rgba(#3A4050, 0.65);
+		border-radius: 4px;
+		padding: 0.7rem;
+		color: #7C89AD;
+		-webkit-appearance: none;
 	}
 
 	legend {
@@ -120,6 +156,10 @@ input[type="text"]:focus {
 	.content {
 		padding: 0px 0rem;
 	}
+}
+
+.listings {
+	padding: 1rem;
 }
 
 .listing {
