--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -351,12 +351,33 @@ input[type="text"]:focus {
 		margin:1rem 0;
 	}
 
+	label {
+		margin:1rem 0 0.3rem 0;
+		display:block;
+	}
+
 	input {
-		@extend input;
 		margin-bottom:1rem;
 	}
 
-		dl {
+	input[type="submit"] {
+		color: #ffffff;
+		padding: 1rem 2rem;
+		background: #379911;
+		background: -webkit-gradient(linear, left top, left bottom, from(#379911), to(#0e7311));
+		background: -webkit-linear-gradient(top, #379911 0%, #0e7311);
+		background: -moz-linear-gradient(top, #379911 0%, #0e7311);
+		background: -ms-linear-gradient(top, #379911 0%, #0e7311);
+		background: -o-linear-gradient(top, #379911 0%, #0e7311);
+		background: linear-gradient(top, #379911 0%, #0e7311);
+		border-radius: 3px;
+		border: 1px solid #09470b;
+		cursor:pointer;
+		box-shadow: 0 0.1rem 0.4rem #666;
+		text-shadow:0 0.1rem 0.1rem #000;
+	}
+
+	dl {
 		display:block;
 		overflow:hidden;
 	}
