--- a/stylus/largescreen.styl
+++ b/stylus/largescreen.styl
@@ -29,6 +29,25 @@
 		float: left;
 	}
 
+	.section {
+		float:left;
+		width:50%;
+		box-shadow:0 0 0 #999;
+	}
+
+	.more-details {
+		clear:left;
+		float:none;
+	}
+
+	.madlib {
+		position:absolute;
+		right:0px;
+	}
+
+	.colapse {
+		display:none;
+	}
 }
 
 //-----------------------------------------------------------------------------
