--- a/stylus/largescreen.styl
+++ b/stylus/largescreen.styl
@@ -10,23 +10,15 @@
 		display: none;
 	}
 
-	body {
-		font-size: 1.6rem;
-	}
-
 	.drill {
-		float: left;
-		width: 30%;
+		position: absolute;
+		top: 5rem;
+		left: 0;
+		width: 26rem;
 	}
 
 	.listings {
-		float: right;
-		width: 70%;
-	}
-
-	.listing {
-		width: 50%;
-		float: left;
+		margin-left: 26rem;
 	}
 
 	.section {
@@ -60,6 +52,12 @@
 	body:after {
 		content: 'desktop';
 		display: none;
+	}
+
+	.listing {
+		margin-right: 1rem;
+		max-width: 36rem;
+		float: left;
 	}
 
 }
