--- a/stylus/largescreen.styl
+++ b/stylus/largescreen.styl
@@ -15,8 +15,11 @@
 	}
 
 	.drill {
-		float: left;
-		width: 30%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 26rem;
 	}
 
 	.listings {
@@ -54,7 +57,7 @@
 //	DESKTOP AND UP
 //-----------------------------------------------------------------------------
 
-@media screen and (min-width: 60em) {
+@media screen and (min-width: 64em) {
 
 	// Conditional Content Loading with JavaScript (http://adactio.com/journal/5429/)
 	body:after {
