--- a/stylus/stylus.styl
+++ b/stylus/stylus.styl
@@ -77,5 +77,6 @@ column-count() {
 //-----------------------------------------------------------------------------
 
 @import 'normalize'
+@import 'font-awesome'
 @import 'app'
 @import 'largescreen'
