--- a/stylus/largescreen.styl
+++ b/stylus/largescreen.styl
@@ -10,10 +10,6 @@
 		display: none;
 	}
 
-	body {
-		font-size: 1.6rem;
-	}
-
 	.drill {
 		position: absolute;
 		top: 0;
@@ -23,13 +19,7 @@
 	}
 
 	.listings {
-		float: right;
-		width: 70%;
-	}
-
-	.listing {
-		width: 50%;
-		float: left;
+		margin-left: 26rem;
 	}
 
 	.section {
@@ -63,6 +53,12 @@
 	body:after {
 		content: 'desktop';
 		display: none;
+	}
+
+	.listing {
+		margin-right: 1rem;
+		max-width: 36rem;
+		float: left;
 	}
 
 	.swipe,
