--- a/stylus/largescreen.styl
+++ b/stylus/largescreen.styl
@@ -20,10 +20,18 @@
 		left: 0;
 		height: 100%;
 		width: 26rem;
+		display:block;
 	}
 
 	.listings {
 		margin-left: 26rem;
+	}
+
+	.listings.listing-min {
+		position: relative;
+		left: 0;
+		top: 0;
+		width: auto;
 	}
 
 	.section {
@@ -61,7 +69,7 @@
 
 	.listing {
 		margin-right: 1rem;
-		max-width: 36rem;
+		max-width: 34rem;
 		float: left;
 	}
 
