--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -247,6 +247,27 @@ input[type="text"]:focus {
 /*
 	Gallery
  */
+
+.back {
+	color: #f5f5f5;
+	padding: 0.7rem 1.2rem;
+	background: #379911;
+	background: -webkit-gradient(linear, left top, left bottom, from(#7680A4), to(#5B6381));
+	background: -webkit-linear-gradient(top, #7680A4 0%, #5B6381);
+	background: -moz-linear-gradient(top, #7680A4 0%, #5B6381);
+	background: -ms-linear-gradient(top, #7680A4 0%, #5B6381);
+	background: -o-linear-gradient(top, #7680A4 0%, #5B6381);
+	background: linear-gradient(top, #7680A4 0%, #5B6381);
+	border-radius: 0.3rem;
+	border: 1px solid #333;
+	cursor:pointer;
+	text-shadow:0 0.1rem 0.1rem #000;
+	font-size:1.2rem;
+	position:absolute;
+	top:0.8rem;
+	left:0.8rem;
+}
+
 #gallery {
 	background: black;
 	padding: 1rem;
